--- a/app/src/main/res/layout/fragment_add_vacation.xml
+++ b/app/src/main/res/layout/fragment_add_vacation.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/addVacationDialogNameLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:hint="@string/add_vacation_dialog_name_hint"
@@ -24,7 +26,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/addVacationDialogHotelNameLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:hint="@string/add_vacation_dialog_hotel_hint"
@@ -42,7 +44,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/addVacationDialogLocationLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:hint="@string/add_vacation_dialog_location_hint"
@@ -63,12 +65,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:gravity="center"
         android:hint="@string/add_vacation_dialog_necessary_money"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addVacationDialogLocationLayout"
-        app:startIconDrawable="@drawable/ic_baseline_money"
-        android:gravity="center">
+        app:startIconDrawable="@drawable/ic_baseline_money">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addVacationDialogPriceEditText"
@@ -78,15 +80,14 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:padding="15dp"
-        android:id="@+id/containedButton"
+        android:id="@+id/btnCreateVacation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="15dp"
         android:text="@string/add_vacation_dialog_create_vacation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addVacationDialogPriceLayout"
         app:layout_constraintVertical_bias="0.7" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
