--- a/app/src/main/res/layout/fragment_detailed_vacation.xml
+++ b/app/src/main/res/layout/fragment_detailed_vacation.xml
@@ -1,77 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.DetailedVacationFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.example.desiredvacations.ui.main.MainViewModel" />
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        tools:context=".ui.main.DetailedVacationFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:padding="15dp"
-                android:textSize="40sp"
-                tools:text="Vacation Name" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="end">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/btnDetailedVacationEdit"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/ic_baseline_edit"
-                    android:contentDescription="@string/detailed_vacation_edit_vacation_button_hint" />
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:padding="15dp"
+                    android:text="@{viewModel.currentVacation.name}"
+                    android:textSize="40sp"
+                    tools:text="Vacation Name" />
 
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/ic_baseline_upload"
-                    android:contentDescription="@string/detailed_vacation_upload_image_button_hint" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="end">
+
+                    <ImageButton
+                        android:id="@+id/btnDetailedVacationEdit"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:contentDescription="@string/detailed_vacation_edit_vacation_button_hint"
+                        android:src="@drawable/ic_baseline_edit" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:contentDescription="@string/detailed_vacation_upload_image_button_hint"
+                        android:src="@drawable/ic_baseline_upload" />
+                </LinearLayout>
+
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/detailed_vacation_image_hint"
+                android:src="@drawable/ic_baseline_default_image" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@{viewModel.currentVacation.hotelName}"
+                android:textSize="20dp"
+                app:drawableStartCompat="@drawable/ic_baseline_hotel"
+                tools:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@{viewModel.currentVacation.location}"
+                android:textSize="20dp"
+                app:drawableStartCompat="@drawable/ic_baseline_location"
+                tools:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@{viewModel.currentVacation.moneyNeeded}"
+                android:textSize="20dp"
+                app:drawableStartCompat="@drawable/ic_baseline_money"
+                tools:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@{viewModel.currentVacation.description}"
+                android:textSize="20dp"
+                app:drawableStartCompat="@drawable/ic_baseline_description"
+                tools:text="TextView" />
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_default_image"
-            android:contentDescription="@string/detailed_vacation_image_hint" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    </LinearLayout>
-</FrameLayout>
+    </FrameLayout>
+</layout>
