--- a/app/src/main/res/layout/fragment_detailed_vacation.xml
+++ b/app/src/main/res/layout/fragment_detailed_vacation.xml
@@ -8,6 +8,10 @@
         <variable
             name="viewModel"
             type="com.example.desiredvacations.ui.main.MainViewModel" />
+
+        <variable
+            name="detailedVacationFragment"
+            type="com.example.desiredvacations.ui.main.DetailedVacationFragment" />
     </data>
 
     <FrameLayout
@@ -42,18 +46,21 @@
                     android:gravity="end">
 
                     <ImageButton
+                        android:onClick="@{()-> detailedVacationFragment.openEditDialog()}"
                         android:id="@+id/btnDetailedVacationEdit"
-                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        style="?attr/materialButtonOutlinedStyle"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
+                        android:layout_marginTop="20dp"
                         android:contentDescription="@string/detailed_vacation_edit_vacation_button_hint"
                         android:src="@drawable/ic_baseline_edit" />
 
                     <ImageButton
                         android:id="@+id/imageButton"
-                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        style="?attr/materialButtonOutlinedStyle"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
+                        android:layout_marginTop="20dp"
                         android:contentDescription="@string/detailed_vacation_upload_image_button_hint"
                         android:src="@drawable/ic_baseline_upload" />
                 </LinearLayout>
@@ -75,7 +82,7 @@
                 android:text="@{viewModel.currentVacation.hotelName}"
                 android:textSize="20dp"
                 app:drawableStartCompat="@drawable/ic_baseline_hotel"
-                tools:text="TextView" />
+                tools:text="Hotel name" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -85,7 +92,7 @@
                 android:text="@{viewModel.currentVacation.location}"
                 android:textSize="20dp"
                 app:drawableStartCompat="@drawable/ic_baseline_location"
-                tools:text="TextView" />
+                tools:text="Location" />
 
             <TextView
                 android:id="@+id/textView6"
@@ -95,7 +102,7 @@
                 android:text="@{viewModel.currentVacation.moneyNeeded}"
                 android:textSize="20dp"
                 app:drawableStartCompat="@drawable/ic_baseline_money"
-                tools:text="TextView" />
+                tools:text="Money needed" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -105,7 +112,7 @@
                 android:text="@{viewModel.currentVacation.description}"
                 android:textSize="20dp"
                 app:drawableStartCompat="@drawable/ic_baseline_description"
-                tools:text="TextView" />
+                tools:text="Description" />
         </LinearLayout>
     </FrameLayout>
 </layout>
