--- a/app/src/main/res/layout/item_vacation.xml
+++ b/app/src/main/res/layout/item_vacation.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvVacationItem"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
