--- a/app/src/main/res/layout/fragment_detailed_vacation.xml
+++ b/app/src/main/res/layout/fragment_detailed_vacation.xml
@@ -17,12 +17,12 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".ui.main.DetailedVacationFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:ignore="UselessParent">
 
@@ -64,17 +64,20 @@
                         android:layout_height="50dp"
                         android:layout_marginTop="20dp"
                         android:contentDescription="@string/detailed_vacation_upload_image_button_hint"
+                        android:onClick="@{() -> detailedVacationFragment.pickImage()}"
                         android:src="@drawable/ic_baseline_upload" />
                 </LinearLayout>
 
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/ivCurrentVacationImage"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
                 android:contentDescription="@string/detailed_vacation_image_hint"
-                android:src="@drawable/ic_baseline_default_image" />
+                tools:src="@drawable/ic_baseline_default_image" />
+            <!--                android:src="@{viewModel.currentVacation.image}" -->
 
             <TextView
                 android:id="@+id/textView4"
