--- a/app/src/main/res/layout/item_vacation.xml
+++ b/app/src/main/res/layout/item_vacation.xml
@@ -19,12 +19,12 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/ivVacationImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:srcCompat="@drawable/ic_baseline_default_image"
-                android:contentDescription="@string/vacation_image" />
+                android:contentDescription="@string/vacation_image"
+                tools:src="@drawable/ic_baseline_default_image" />
 
             <LinearLayout
                 android:layout_width="match_parent"
